fix player name alignment

--- a/scoring.css
+++ b/scoring.css
@@ -222,6 +222,8 @@ div.franchise-score {
   .player-name h3 {
     font-size: 11px;
     font-weight: normal;
+    margin-left: 0;
+    padding-left: 0;
     /* text-transform: capitalize; */
   }
   .player-team {
